<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".editProfile">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/dashboardCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/aqua"
            android:paddingHorizontal="20dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="3dp"
                android:text="@string/edit_account"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/avatarImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tittle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">

                <ImageButton
                    android:id="@+id/editAvatarButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignEnd="@id/avatarImage"
                    android:layout_alignBottom="@id/avatarImage"
                    android:background="@drawable/buttonroundcorner"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@string/edit_avatar"
                    android:scaleType="center"
                    android:src="@drawable/ic_edit"
                    android:translationZ="4dp" />

                <ImageView
                    android:id="@+id/avatarImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/roundcorner"
                    android:contentDescription="@string/avatar"
                    android:elevation="3dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_account" />
            </RelativeLayout>

            <TextView
                android:id="@+id/avatarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatarImageLayout"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/avatar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileCards"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="10dp"
        android:drawableTint="@color/silver"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black" />

    <RelativeLayout
        android:id="@+id/jenisKelaminLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/jkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="8dp"
            android:text="@string/gender"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/jenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jkText"
            android:checkedButton="@id/radioMale"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/silver"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/female"
                android:textColor="@color/silver"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </RelativeLayout>

    <EditText
        android:id="@+id/bodEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jenisKelaminLayout"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="10dp"
        android:drawableTint="@color/silver"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/birth_of_date"
        android:inputType="none"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bodEditText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:drawableTint="@color/silver"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEditText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/silver"
        android:drawablePadding="10dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEditText"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@id/cancelButton"
        android:backgroundTint="@color/blue"
        android:drawablePadding="10dp"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

</RelativeLayout>